--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "gulp": "gulp",
+    "dev": "npm run gulp && vite",
+    "build": "npm run gulp && vite build",
+    "preview": "npm run gulp && vite preview"
   },
   "dependencies": {
     "pinia": "^2.3.0",
@@ -17,6 +18,10 @@
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^6.0.1",
     "@vitejs/plugin-vue": "^5.2.1",
+    "gulp": "^5.0.0",
+    "gulp-cheerio": "^1.0.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-svg-sprite": "^2.0.3",
     "stylus": "^0.64.0",
     "vite": "^6.0.1",
     "vite-plugin-pug": "^0.4.1"
